--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,3 +5,12 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
+
+input,
+select,
+textarea {
+  &.ng-dirty.ng-invalid,
+  &.ng-touched.ng-invalid {
+    @extend .is-invalid;
+  }
+}
