--- a/src/app/components/patient-table/patient-table.component.scss
+++ b/src/app/components/patient-table/patient-table.component.scss
@@ -15,3 +15,17 @@ button.calendar, button.calendar:active {
   background-size: 1.2em;
   background-position: center;
 }
+
+.error {
+  margin-bottom: .5em;
+}
+
+.valid {
+  margin-bottom: 2em;
+}
+
+@media (min-width: 1200px){
+  .container {
+    max-width: 92%;
+  }
+}
